--- a/src/components/__cards/__registration/registration.scss
+++ b/src/components/__cards/__registration/registration.scss
@@ -1,7 +1,68 @@
 @import '../../buttons/buttons.scss';
+@import '../../buttons/button-transparent.scss';
 @import '../../text-field/text-field.scss';
 @import '../../masked-text-field/masked-text-field.scss';
 @import '../../radio-buttons/radio-buttons.scss';
 @import '../../toggle/toggle.scss';
 @import '../../calendar/calendar.scss';
-@import '../cards.scss';
+@import '../../../style/layout/mixins/card.scss';
+
+.card-registration {
+    @include card;
+
+    &__title {
+        margin: 0;
+        margin-bottom: 1.8rem;
+        font-size: 24px;
+        color: $Dark-shade-100;
+    }
+
+    &__input:not(:last-of-type) {
+        margin-bottom: 0.8rem;
+    }
+
+    &__name {
+        margin-bottom: 0.5rem;
+    }
+
+    &__radio {
+        margin-bottom: 0.8rem;
+    }
+
+    &__suptitle {
+        margin: 0;
+        font-size: 12px;
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+
+    &__date {
+        margin-bottom: 1.2rem;
+    }
+
+    &__data {
+        margin-bottom: 0.5rem;
+    }
+
+    &__data-item:not(:last-of-type) {
+        margin-bottom: 0.8rem;
+    }
+
+    &__toggle {
+        margin-bottom: 1.7rem;
+    }
+
+    &__btn {
+        margin-bottom: 2.1rem;
+    }
+
+    &__login {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__btn-tr {
+        @include btn-transparent(99px, 44px);
+    }
+}
