--- a/src/components/buttons/button-transparent.pug
+++ b/src/components/buttons/button-transparent.pug
@@ -1,3 +1,3 @@
 mixin buttonTransparent(text='click me')
-    .button(class=attributes.class)
-        button(type='submit').button__submit.button__submit--transparent= text
+    .button-transparent(class=attributes.class)
+        button(type='submit').button-transparent__inp= text
