--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -8,6 +8,7 @@
 @import '/pages/website/__search-room/search-room.scss';
 @import '/pages/website/__landing/landing.scss';
 @import '/pages/website/__room-details/room-details.scss';
+@import '/pages/website/__registration/registration.scss';
 
 *,
 *::after,
