--- a/src/components/__headers&footers/__header/__authorization--false/authorization--false.pug
+++ b/src/components/__headers&footers/__header/__authorization--false/authorization--false.pug
@@ -2,4 +2,5 @@ mixin auto--false
     .header__authorization
         i.material-icons.header__acc--mobile account_circle
         +buttonTransparent('войти')(class='header__login')
-        +buttonSmall('зарегистрироваться')(class='header__registration')
+        a(href="./registration.html")
+            +buttonSmall('зарегистрироваться')(class='header__registration')
