--- a/src/components/__headers&footers/__header/__authorization--false/authorization--false.scss
+++ b/src/components/__headers&footers/__header/__authorization--false/authorization--false.scss
@@ -1,3 +1,5 @@
+@import '../../../buttons/button-transparent.scss';
+
 .header {
     &__authorization {
         display: flex;
@@ -12,5 +14,9 @@
 
     &__acc--mobile {
         display: none;
+    }
+
+    &__login {
+        @include btn-transparent;
     }
 }
