--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -26,51 +26,6 @@
         }
     }
 
-    &--transparent {
-        cursor: pointer;
-        text-transform: uppercase;
-        min-width: 7em;
-        padding: 0.834em 1.668em;
-        font-weight: 700;
-        font-size: 12px;
-        line-height: 15px;
-        position: relative;
-        color: #BC9CFF;
-        z-index: 2;
-
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-            width: 100%;
-            height: 100%;
-            z-index: -2;
-            border-radius: 22px;
-        }
-
-        &::after {
-            content: '';
-            position: absolute;
-            top: 2px;
-            left: 2px;
-            width: calc(100% - 4px);
-            height: calc(100% - 4px);
-            background: #FFF;
-            border-radius: 22px;
-            z-index: -1;
-        }
-
-        &:hover {
-            opacity: 0.5;
-        }
-
-        &:active {
-            transform: translate(0.5px, 0.5px);
-        }
-    }
-
     &--no-border {
         text-transform: uppercase;
         color: #BC9CFF;
@@ -104,6 +59,7 @@
         font-size: 12px;
         line-height: 15px;
         position: relative;
+        padding-bottom: 4px;
 
         &:hover {
             opacity: 0.5;
@@ -125,9 +81,15 @@
 
     &__icon {
         position: absolute;
-        top: 0.4em;
-        right: 0.3em;
+        top: 0.35em;
+        right: 0.38em;
         pointer-events: none;
         z-index: 100;
+    }
+}
+
+@media (max-width: 480px) {
+    .button__submit--big {
+        width: 17.715rem;
     }
 }
