--- a/src/pages/website/__room-details/room-details.scss
+++ b/src/pages/website/__room-details/room-details.scss
@@ -1,11 +1,12 @@
 @import '../../../components/__cards/__room-number/room-number.scss';
 @import '../../../components/benefits/benefits.scss';
 @import '../../../components/comment/comment.scss';
+@import '../../../components/__cards/__order/order.scss';
 
 .room {
     display: flex;
     justify-content: space-between;
-    margin: 5rem 0;
+    margin: 5.1rem 0;
     column-gap: 1rem;
 
     &__collage {
@@ -40,33 +41,33 @@
     &__about {
         display: flex;
         justify-content: flex-start;
-        column-gap: 5rem;
+        column-gap: 5.8rem;
         flex-wrap: wrap;
 
-        &> :first-child {
-            margin-left: 0.7rem;
-        }
     }
 
     &__chart {
         display: flex;
         justify-content: space-between;
         column-gap: 2.1rem;
-    }
-
-    &__chart-circle {
         position: relative;
+        margin-top: 1.2rem;
     }
 
     &__list {
         list-style-type: none;
         padding: 0;
+        margin: 0;
     }
 
     &__item {
         display: flex;
         align-items: flex-start;
-        column-gap: 5px;
+        column-gap: 10px;
+
+        &:not(:first-of-type) {
+            margin-top: 10px;
+        }
 
     }
 
@@ -109,6 +110,12 @@
         }
     }
 
+    &__title {
+        font-size: 19px;
+        color: $Dark-shade-100;
+        margin: 0;
+    }
+
     &__title-add {
         white-space: nowrap;
     }
@@ -124,27 +131,47 @@
     }
 
     &__comment {
-        margin-top: 2.1rem;
+        margin-top: 1.1rem;
     }
 
-    &__comment-item:not(:first-of-type) {
-        margin-top: 22px;
+    &__comment-item {
+        margin-top: 1.5rem;
+
+        &:last-of-type {
+            margin-top: 0.7rem;
+        }
     }
 
     &__additional {
         display: flex;
         column-gap: 7rem;
         flex-wrap: wrap;
+        margin-top: 1.3rem;
     }
 
 
     &__rules {
-        max-width: 250px;
+        max-width: 252px;
         min-width: 250px;
+    }
+
+    &__rules>&__title {
+        margin-left: 1.3rem;
+        margin-bottom: 1.2rem;
     }
 
     &__cancel {
         max-width: 341px;
+    }
+
+    &__cancel>&__title {
+        margin-left: 0.8rem;
+    }
+
+    &__text {
+        margin: 0;
+        margin-top: 1.2rem;
+        margin-left: 0.75rem;
     }
 
 }
@@ -186,5 +213,13 @@
         justify-content: flex-start;
         height: fit-content;
         max-height: initial;
+    }
+
+    .room__card {
+        margin-bottom: 2rem;
+    }
+
+    .room__rules {
+        margin-bottom: 2rem;
     }
 }
