--- a/src/style/layout/mixins/radio.scss
+++ b/src/style/layout/mixins/radio.scss
@@ -20,6 +20,7 @@
                 height: 20px;
                 border: 1px solid $Dark-shade-25;
                 border-radius: 50%;
+                margin: 0;
                 margin-right: 9.74px;
                 cursor: pointer;
                 position: relative;
