--- a/src/components/__cards/__registration/registration.pug
+++ b/src/components/__cards/__registration/registration.pug
@@ -29,5 +29,5 @@ mixin registration()
 
             .card-registration__login
                 .card-registration__login-info Уже есть аккаунт на Toxin
-
-                +buttonTransparent('войти')(class='card-registration__btn-tr')
+                a(href="./login.html") 
+                    +buttonTransparent('войти')(class='card-registration__btn-tr')
