--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -9,6 +9,7 @@
 @import '/pages/website/__landing/landing.scss';
 @import '/pages/website/__room-details/room-details.scss';
 @import '/pages/website/__registration/registration.scss';
+@import '/pages/website/__login/login.scss';
 
 *,
 *::after,
