--- a/src/components/buttons/button-big.pug
+++ b/src/components/buttons/button-big.pug
@@ -1,5 +1,5 @@
 mixin buttonBig(text='click me', href='./search.html')
-    .button(class=attributes.class)
-        a(href=href).button__link
-            button(type='submit').button__submit.button__submit--big= text
-            i.material-icons.material-icons--color-white.button__icon arrow_forward
+    .button-big(class=attributes.class)
+        a(href=href).button-big__link
+            button(type='submit').button-big__submit= text
+            i.material-icons.material-icons--color-white.button-big__icon arrow_forward
