--- a/src/components/filter-date-dropdown/filter-date-dropdown.scss
+++ b/src/components/filter-date-dropdown/filter-date-dropdown.scss
@@ -5,7 +5,7 @@
 
 .filter-date {
     position: relative;
-    width: fit-content;
+    width: auto;
 
     &__dropdown {
         @include text-field;
