--- a/src/components/__cards/__order/order.scss
+++ b/src/components/__cards/__order/order.scss
@@ -1,6 +1,6 @@
 @import "../__room-number/room-number.scss";
 @import '../../date-dropdown/date-dropdown.scss';
-@import '../../buttons/buttons.scss';
+@import '../../buttons/button-big';
 @import '../../calendar/calendar.scss';
 @import '../../../style/layout/mixins/card.scss';
 
@@ -8,8 +8,7 @@
     @include card;
 
     &__title {
-        margin: 0;
-        margin-bottom: 2.6rem;
+        margin: 0 0 2.6rem 0;
         font-size: 24px;
     }
 
@@ -65,7 +64,7 @@
     }
 
     &__price-line {
-        width: -webkit-fill-available;
+        width: 100%;
         align-self: flex-end;
         border-bottom: 1px dashed $Dark-shade-25;
         margin-bottom: 5px;
