--- a/src/components/__cards/__registration/registration.pug
+++ b/src/components/__cards/__registration/registration.pug
@@ -25,7 +25,7 @@ mixin registration()
 
             +toggle('Получать спецпредложения')(class='card-registration__toggle')
 
-            +buttonBig('зарегестрироваться')(class='card-registration__btn')
+            +buttonBig('зарегестрироваться', './registration.html')(class='card-registration__btn')
 
             .card-registration__login
                 .card-registration__login-info Уже есть аккаунт на Toxin
