--- a/src/components/__headers&footers/__header/__header-menu/header-menu.scss
+++ b/src/components/__headers&footers/__header/__header-menu/header-menu.scss
@@ -1,3 +1,5 @@
+@import '../../../../style/layout/variables';
+
 .header {
     z-index: 100;
     &__link {
@@ -78,5 +80,14 @@
             row-gap: 1em;
             filter: drop-shadow(0 10px 20px rgba(31,32,65, 5%));
         }
+    }
+    &__reg {
+        display: flex;
+        justify-content: space-between;
+        text-decoration: none;
+        color: inherit;
+    }
+    &__reg-link {
+        margin-left: 30px;
     }
 }
