--- a/src/components/__headers&footers/__header/header.scss
+++ b/src/components/__headers&footers/__header/header.scss
@@ -1,6 +1,7 @@
-@import '../../buttons/buttons.scss';
-@import '/style/layout/mixins/arrow-after.scss';
-@import '/assets/fonts/material-icons/material-icons.scss';
+@import '../../buttons/button-small';
+@import '../../buttons/button-transparent';
+@import '../../../style/layout/mixins/arrow-after.scss';
+@import '../../../assets/fonts/material-icons/material-icons.scss';
 @import './__authorization--true/authorization--true.scss';
 @import './__authorization--false/authorization--false.scss';
 @import './__header-menu/header-menu.scss';
@@ -29,15 +30,13 @@
         &-svg {
             width: 100%;
             height: 40px;
-            background: url(../assets/images/logo.svg);
-            background-repeat: no-repeat;
+            background: url(../assets/images/logo.svg) no-repeat;
         }
 
         &-text {
             width: 100%;
             height: 14px;
-            background: url(../assets/images/TOXIN.svg);
-            background-repeat: no-repeat;
+            background: url(../assets/images/TOXIN.svg) no-repeat;
         }
     }
 
@@ -103,10 +102,6 @@
 
         &__container {
             flex-direction: row;
-        }
-
-        &__acc--mobile {
-            display: inline-block;
         }
 
         &__content {
