--- a/src/pages/website/__room-details/room-details.scss
+++ b/src/pages/website/__room-details/room-details.scss
@@ -4,231 +4,231 @@
 @import '../../../components/__cards/__order/order.scss';
 
 .room {
+  display: flex;
+  justify-content: space-between;
+  margin: 5.1rem 0;
+  column-gap: 1rem;
+
+  &__collage {
+    display: flex;
+    justify-content: center;
+    max-height: 485px;
+  }
+
+  &__block {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  &__block2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  &__img--first {
+    max-height: 485px;
+    height: 100%;
+    max-width: 100%;
+    min-width: fit-content;
+  }
+
+  &__img--secondary {
+    max-height: 242.5px;
+    height: 100%;
+  }
+
+  &__about {
+    display: flex;
+    justify-content: flex-start;
+    column-gap: 5.8rem;
+    flex-wrap: wrap;
+
+  }
+
+  &__chart {
     display: flex;
     justify-content: space-between;
-    margin: 5.1rem 0;
-    column-gap: 1rem;
+    column-gap: 2.1rem;
+    position: relative;
+    margin-top: 1.2rem;
+  }
 
-    &__collage {
-        display: flex;
-        justify-content: center;
-        max-height: 485px;
+  &__list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  &__item {
+    display: flex;
+    align-items: flex-start;
+    column-gap: 10px;
+
+    &:not(:first-of-type) {
+      margin-top: 10px;
     }
 
-    &__block {
-        display: flex;
-        justify-content: flex-end;
+  }
+
+  &__chart-item {
+    &:nth-of-type(1) {
+      .room__chart-dot {
+        background: linear-gradient(180deg, #FFE39C 0%, #FFBA9C 100%);
+      }
     }
 
-    &__block2 {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
+    &:nth-of-type(2) {
+      .room__chart-dot {
+        background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+      }
     }
 
-    &__img--first {
-        max-height: 485px;
-        height: 100%;
-        max-width: 100%;
-        min-width: fit-content;
+    &:nth-of-type(3) {
+      .room__chart-dot {
+        background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+      }
     }
 
-    &__img--secondary {
-        max-height: 242.5px;
-        height: 100%;
+    &:nth-of-type(4) {
+      .room__chart-dot {
+        background: linear-gradient(180deg, #919191 0%, #3D4975 100%);
+      }
     }
+  }
 
-    &__about {
-        display: flex;
-        justify-content: flex-start;
-        column-gap: 5.8rem;
-        flex-wrap: wrap;
+  &__item-dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    min-width: 10px;
+    min-height: 10px;
+    margin-top: 6px;
 
+    &--grey {
+      background-color: $Dark-shade-25;
     }
+  }
 
-    &__chart {
-        display: flex;
-        justify-content: space-between;
-        column-gap: 2.1rem;
-        position: relative;
-        margin-top: 1.2rem;
+  &__title {
+    font-size: 19px;
+    color: $Dark-shade-100;
+    margin: 0;
+  }
+
+  &__title-add {
+    white-space: nowrap;
+  }
+
+  &__reviews {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__reviews-add {
+    color: $Dark-shade-50;
+  }
+
+  &__comment {
+    margin-top: 1.1rem;
+  }
+
+  &__comment-item {
+    margin-top: 1.5rem;
+
+    &:last-of-type {
+      margin-top: 0.7rem;
     }
+  }
 
-    &__list {
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
-    }
-
-    &__item {
-        display: flex;
-        align-items: flex-start;
-        column-gap: 10px;
-
-        &:not(:first-of-type) {
-            margin-top: 10px;
-        }
-
-    }
-
-    &__chart-item {
-        &:nth-of-type(1) {
-            .room__chart-dot {
-                background: linear-gradient(180deg, #FFE39C 0%, #FFBA9C 100%);
-            }
-        }
-
-        &:nth-of-type(2) {
-            .room__chart-dot {
-                background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
-            }
-        }
-
-        &:nth-of-type(3) {
-            .room__chart-dot {
-                background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-            }
-        }
-
-        &:nth-of-type(4) {
-            .room__chart-dot {
-                background: linear-gradient(180deg, #919191 0%, #3D4975 100%);
-            }
-        }
-    }
-
-    &__item-dot {
-        width: 10px;
-        height: 10px;
-        border-radius: 50%;
-        min-width: 10px;
-        min-height: 10px;
-        margin-top: 6px;
-
-        &--grey {
-            background-color: $Dark-shade-25;
-        }
-    }
-
-    &__title {
-        font-size: 19px;
-        color: $Dark-shade-100;
-        margin: 0;
-    }
-
-    &__title-add {
-        white-space: nowrap;
-    }
-
-    &__reviews {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    &__reviews-add {
-        color: $Dark-shade-50;
-    }
-
-    &__comment {
-        margin-top: 1.1rem;
-    }
-
-    &__comment-item {
-        margin-top: 1.5rem;
-
-        &:last-of-type {
-            margin-top: 0.7rem;
-        }
-    }
-
-    &__additional {
-        display: flex;
-        column-gap: 7rem;
-        flex-wrap: wrap;
-        margin-top: 1.3rem;
-    }
+  &__additional {
+    display: flex;
+    column-gap: 7rem;
+    flex-wrap: wrap;
+    margin-top: 1.3rem;
+  }
 
 
-    &__rules {
-        max-width: 252px;
-        min-width: 250px;
-    }
+  &__rules {
+    max-width: 252px;
+    min-width: 250px;
+  }
 
-    &__rules>&__title {
-        margin-left: 1.3rem;
-        margin-bottom: 1.2rem;
-    }
+  &__rules > &__title {
+    margin-left: 1.3rem;
+    margin-bottom: 1.2rem;
+  }
 
-    &__cancel {
-        max-width: 341px;
-    }
+  &__cancel {
+    max-width: 341px;
+  }
 
-    &__cancel>&__title {
-        margin-left: 0.8rem;
-    }
+  &__cancel > &__title {
+    margin-left: 0.8rem;
+  }
 
-    &__text {
-        margin: 0;
-        margin-top: 1.2rem;
-        margin-left: 0.75rem;
-    }
+  &__text {
+    margin: 1.2rem 0 0 0.75rem;
+  }
 
 }
 
 @media (max-width: 920px) {
-    .room__collage {
-        flex-direction: column;
-        max-height: initial;
-    }
+  .room__collage {
+    flex-direction: column;
+    max-height: initial;
+  }
 
-    .room__block2 {
-        flex-direction: row;
-        justify-content: center;
-    }
+  .room__block2 {
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 @media (max-width: 800px) {
-    .room {
-        flex-wrap: wrap-reverse;
-        justify-content: center;
-    }
+  .room {
+    flex-wrap: wrap-reverse;
+    justify-content: center;
+    row-gap: 2rem;
+  }
 
-    .room__img--first {
-        min-width: auto;
-        max-width: none;
+  .room__img--first {
+    min-width: auto;
+    max-width: none;
 
-        width: 100%;
-        height: 100%;
-    }
+    width: 100%;
+    height: 100%;
+  }
 
 }
 
 @media (max-width: 480px) {
-    .room__block2 {
-        flex-direction: column;
-        display: none;
-    }
+  .room__block2 {
+    flex-direction: column;
+    display: none;
+  }
 
-    .room__collage {
-        justify-content: flex-start;
-        height: fit-content;
-        max-height: initial;
-    }
+  .room__collage {
+    justify-content: flex-start;
+    height: fit-content;
+    max-height: initial;
+  }
 
-    .room__card {
-        margin-bottom: 2rem;
-    }
+  .room__card {
+    margin-bottom: 2rem;
+  }
 
-    .room__rules {
-        margin-bottom: 2rem;
-    }
+  .room__rules {
+    margin-bottom: 2rem;
+  }
 
-    .room__impression {
-        width: 305px;
-    }
+  .room__impression {
+    width: 305px;
+  }
 
-    .room {
-        margin-top: 1.1rem;
-    }
+  .room {
+    margin-top: 1.1rem;
+    row-gap: 1rem;
+  }
 }
