--- a/src/pages/website/__search-room/search-room.scss
+++ b/src/pages/website/__search-room/search-room.scss
@@ -1,129 +1,130 @@
 @import '../../../components/pagination/pagination.scss';
 @import '../../../components/filter-date-dropdown/filter-date-dropdown.scss';
 @import '../../../components/range-slider/range-slider.scss';
-@import '/components/checkbox-list/checkbox-list.scss';
+@import '../../../components/checkbox-list/checkbox-list.scss';
 @import '../../../components/rich-checkbox-buttons/rich-checkbox-buttons.scss';
 @import '../../../components/dropdown/dropdown.scss';
 @import '../../../components/expandable-checkbox-list/expandable-checkbox-list.scss';
 @import '../../../components/__cards/__products/products.scss';
 
 .search {
+  display: flex;
+  column-gap: 2rem;
+  margin-top: 1.1em;
+  justify-content: space-between;
+  position: relative;
+
+  &__main {
     display: flex;
-    column-gap: 2rem;
-    margin-top: 1.1em;
-    justify-content: space-between;
-    position: relative;
+    flex-direction: column;
+    width: min-content;
 
-    &__main {
-        display: flex;
-        flex-direction: column;
-        width: min-content;
+    &-title {
+      font-size: 24px;
+      color: $Dark-shade-100;
+      margin-bottom: 0.9em;
+    }
+  }
 
-        &-title {
-            font-size: 24px;
-            color: $Dark-shade-100;
-            margin-bottom: 0.9em;
-        }
+  &__information {
+    display: flex;
+    flex-direction: column;
+
+    &-filter {
+      margin-bottom: 0.19em;
+      width: 266px;
     }
 
-    &__information {
-        display: flex;
-        flex-direction: column;
-
-        &-filter {
-            margin-bottom: 0.19em;
-        }
-
-        &-title {
-            text-transform: uppercase;
-            font-size: 12px;
-            color: $Dark-shade-100;
-            margin-bottom: 0.1em;
-        }
-
-        &-dropdown {
-            margin-bottom: 1em;
-        }
-
-        &-text {
-            font-size: 12px;
-            color: $Dark-shade-50;
-            margin-top: 1.5em;
-            margin-bottom: 0.6em;
-        }
-
-        &-range {
-            margin-top: -20px;
-        }
-
-        &-checkbox-list {
-            margin-bottom: 2.1em;
-        }
-
-        &-expandable {
-            margin-top: 1em;
-        }
+    &-title {
+      text-transform: uppercase;
+      font-size: 12px;
+      color: $Dark-shade-100;
+      margin-bottom: 0.1em;
     }
 
-    &__pagination {
-        align-self: center;
-        margin-top: 2rem;
-        margin-bottom: 77px;
-        margin-right: 0.7rem;
+    &-dropdown {
+      margin-bottom: 1em;
     }
 
-    &__apartments {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        grid-column-gap: 0.85em;
-        grid-row-gap: 1.5rem;
+    &-text {
+      font-size: 12px;
+      color: $Dark-shade-50;
+      margin-top: 1.5em;
+      margin-bottom: 0.6em;
     }
+
+    &-range {
+      margin-top: -20px;
+    }
+
+    &-checkbox-list {
+      margin-bottom: 2.1em;
+    }
+
+    &-expandable {
+      margin-top: 1em;
+    }
+  }
+
+  &__pagination {
+    align-self: center;
+    margin-top: 2rem;
+    margin-bottom: 77px;
+    margin-right: 0.7rem;
+  }
+
+  &__apartments {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 0.85em;
+    grid-row-gap: 1.5rem;
+  }
 }
 
 @media (max-width: 1250px) {
-    .search__apartments {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(6, 1fr);
-    }
+  .search__apartments {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+  }
 
-    .search {
-        justify-content: center;
-    }
+  .search {
+    justify-content: center;
+  }
 }
 
 @media (max-width: 920px) {
-    .search__apartments {
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(12, 1fr);
-        width: max-content;
-    }
+  .search__apartments {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    width: max-content;
+  }
 }
 
 @media (max-width: 610px) {
-    .search__information {
-        align-items: center;
-    }
+  .search__information {
+    align-items: center;
+  }
 
-    .search {
-        display: block;
-        margin-top: 0;
-    }
+  .search {
+    display: block;
+    margin-top: 0;
+  }
 
-    .search__apartments {
-        align-self: center;
-    }
+  .search__apartments {
+    align-self: center;
+  }
 
-    .search__main-title {
-        text-align: center;
-    }
+  .search__main-title {
+    text-align: center;
+  }
 
-    .search__nav {
-        display: block;
-    }
+  .search__nav {
+    display: block;
+  }
 
-    .search__main {
-        width: fit-content;
-        margin: 0 auto;
-    }
+  .search__main {
+    width: fit-content;
+    margin: 0 auto;
+  }
 }
