--- a/src/style/layout/mixins/text-field.scss
+++ b/src/style/layout/mixins/text-field.scss
@@ -1,9 +1,10 @@
+@import '../../../style/layout/variables';
 // ---- MAIN DESIGN TEXT FIELD ----
 @mixin text-field {
     border: 1px solid $Dark-shade-25;
     border-radius: 4px;
     line-height: 24px;
-    width: 320px;
+    width: 100%;
     height: 44px;
     padding: 0 15px;
     color: $Dark-shade-75;
