--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -7,5 +7,5 @@ mixin range
         form.range__form
             .range__track
                 .track-line
-            input.range__slider.range__slider-first(type="range" min='0' max='10000' value='3000')
-            input.range__slider.range__slider-second(type="range"  min='0' max='10000' value='7000')
+            input.range__slider.range__slider-first(type="range" min='0' max='10000' value='3000' step='500')
+            input.range__slider.range__slider-second(type="range"  min='0' max='10000' value='7000' step='500')
