--- a/src/components/subscription-text-field/subscription-text-field.pug
+++ b/src/components/subscription-text-field/subscription-text-field.pug
@@ -1,4 +1,4 @@
 mixin subscribe(email='Email')
-    form.subscription
+    form.subscription(class=attributes.class)
         input(type="email" name="text-field" placeholder=email).subscription__email
         span.material-icons.material-icons--color-primary.subscription__arrow arrow_forward
