--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -168,10 +168,13 @@
     font-weight: 700;
     font-family: inherit;
     font-size: inherit;
+    pointer-events: none;
+    -moz-appearance:textfield;
 
     &::-webkit-outer-spin-button,
     &::-webkit-inner-spin-button {
         -webkit-appearance: none;
         margin: 0;
     }
+
 }
