--- a/src/pages/UI-kit/__form-elements/form-elements.pug
+++ b/src/pages/UI-kit/__form-elements/form-elements.pug
@@ -1,65 +1,65 @@
 include ../../../components/text-field/text-field.pug
+include ../../../components/dropdown/dropdown.pug
 include ../../../components/masked-text-field/masked-text-field.pug
 include ../../../components/date-dropdown/date-dropdown.pug
 include ../../../components/filter-date-dropdown/filter-date-dropdown.pug
 include ../../../components/subscription-text-field/subscription-text-field.pug
-include ../../../components/dropdown/dropdown.pug
-include ../../../components/dropdown/dropdown-room.pug
-include ../../../components/expandable-checkbox-list/expandable-checkbox-list.pug
-include ../../../components/benefits/benefits.pug
-include ../../../components/radio-buttons/radio-buttons.pug
-include ../../../components/toggle/toggle.pug
-include ../../../components/like-button/like-button.pug
-include ../../../components/rate-button/rate-button.pug
-include ../../../components/pagination/pagination.pug
-include ../../../components/range-slider/range-slider.pug
-include ../../../components/buttons/button-big.pug
-include ../../../components/buttons/button-no-border.pug
-include ../../../components/buttons/button-small.pug
-include ../../../components/buttons/button-transparent.pug
-include ../../../components/rich-checkbox-buttons/rich-checkbox-buttons.pug
-include ../../../components/bullet-list/bullet-list.pug
-include ../../../components/comment/comment.pug
+include ../../../components/checkbox-list/checkbox-list
 
-h1(style="color: #bc9cff;") UI KIT
-h2 TEXT FIELD
-+textInput
-h2 MASKED TEXT FIELD
-+maskedTextField
-h2 DATE DROPDOWN
-+dateDouble
-h2 FILTER DATE DROPDOWN
-+filterDate
-h2 SUBSCRIPTION TEXT FIELD
-+subscribe
-h2 DROPDOWN (WITH ITEM COUNTER)
-+dropdown
-h2 DROPDOWN (ROOM)
-+dropdown-room
-h2 EXPANDABLE CHECKBOX LIST
-+expandable
-h2 BENEFITS
-+benefits
-h2 RADIO BUTTONS 
-+radio
-h2 TOGGLE 
-+toggle
-h2 LIKE BUTTON 
-+like
-h2 RATE BUTTON 
-+rate
-h2 PAGINATION 
-+pagination
-h2 RANGE SLIDER 
-+range
-h2 BUTTONS 
-+buttonBig
-+buttonNoBorder
-+buttonSmall
-+buttonTransparent
-h2 RICH CHECKBOX BUTTONS
-+rich-checkbox
-h2 BULLET LIST 
-+bullet
-h2 COMMENT 
-+comment
+//include ../../../components/dropdown/dropdown-room.pug
+//include ../../../components/expandable-checkbox-list/expandable-checkbox-list.pug
+//include ../../../components/benefits/benefits.pug
+//include ../../../components/radio-buttons/radio-buttons.pug
+//include ../../../components/toggle/toggle.pug
+//include ../../../components/like-button/like-button.pug
+//include ../../../components/rate-button/rate-button.pug
+//include ../../../components/pagination/pagination.pug
+//include ../../../components/range-slider/range-slider.pug
+//include ../../../components/buttons/button-big.pug
+//include ../../../components/buttons/button-no-border.pug
+//include ../../../components/buttons/button-small.pug
+//include ../../../components/buttons/button-transparent.pug
+include ../../../components/rich-checkbox-buttons/rich-checkbox-buttons.pug
+//include ../../../components/bullet-list/bullet-list.pug
+//include ../../../components/comment/comment.pug
+
+doctype html
+html(lang="ru")
+    head
+        meta(charset="UTF-8")
+        meta(http-equiv="X-UA-Compatible", content="IE=edge")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        title Hotel Reservation Project
+        link(rel="shortcut icon", href="../favicon.ico", type="image/x-icon")
+    body
+        .wrapper
+            .ui-container
+                .elements-one
+                    .elements-one__flex
+                        .elements-one__block
+                            h3.elements-one__upper-text1 text field
+                            +textInput(class='elements-one__text-field')
+                        .elements-one__block
+                            h3.elements-one__upper-text1 dropdown
+                            +dropdown(class='elements-one__dropdown')
+                        .elements-one__block
+                            h3.elements-one__upper-text1 masked text field
+                            +maskedTextField(class='elements-one__text-field-masked')
+                        .elements-one__block
+                            +dateDouble('date dropdown', 'date dropdown')(class='elements-one__date-dropdown')
+                        .elements-one__block
+                            h3.elements-one__upper-text1 filter date dropdown
+                            +filterDate(class='elements-one__filter-date')
+                        .elements-one__block
+                            h3.elements-one__upper-text1 subscription text field
+                            +subscribe(class='elements-one__subscribe')
+                    .elements-one__flex
+                        .elements-one__block
+                            h3.elements-one__upper-text1 checkbox button
+                            +checkbox-list(class='elements-one__subscribe')
+
+
+
+
+
+
