--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -2,14 +2,17 @@
 @import './layout/fonts.scss';
 
 // ui kit
-@import '/components/__headers&footers/__header/header.scss';
+@import '../components/__headers&footers/__header/header.scss';
 @import '../components/__headers&footers/__footer/footer.scss';
 
-@import '/pages/website/__search-room/search-room.scss';
-@import '/pages/website/__landing/landing.scss';
-@import '/pages/website/__room-details/room-details.scss';
-@import '/pages/website/__registration/registration.scss';
-@import '/pages/website/__login/login.scss';
+@import '../pages/UI-kit/__colors-type/colors-type';
+@import '../pages/UI-kit/__form-elements/form-elements';
+
+@import '../pages/website/__search-room/search-room.scss';
+@import '../pages/website/__landing/landing.scss';
+@import '../pages/website/__room-details/room-details.scss';
+@import '../pages/website/__registration/registration.scss';
+@import '../pages/website/__login/login.scss';
 
 *,
 *::after,
@@ -29,6 +32,28 @@ body {
     height: 100%;
 }
 
+h1 {
+    font-weight: 700;
+    font-size: 24px;
+    color: $Dark-shade-100;
+    line-height: 29.26px;
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 19px;
+    color: $Dark-shade-100;
+    line-height: 23.16px;
+}
+
+h3 {
+    font-weight: 700;
+    font-size: 12px;
+    color: $Dark-shade-100;
+    line-height: 14.63px;
+    text-transform: uppercase;
+}
+
 .wrapper {
     min-height: 100%;
     display: flex;
@@ -43,6 +68,10 @@ body {
 
 .inner-container {
     padding: 0 10rem;
+}
+
+.ui-container {
+    padding: 5% 10%;
 }
 
 @media (max-width: 1190px) {
